	  Rosinski)
	* Don't ignore namespace information when parsing XMPP data. (Michal
	  Witkowski)
	* Fix a crash that occurred when retrieving certain Offline Messages
	  on MSN.

	XMPP:
	* Support for XEP-0191 blocking.  (Vijay Raghunathan)

	Pidgin:
	* Fix a crash in the Add Account dialog when changing protocols under
	  certain circumstances.

version 2.5.3 (12/20/2008):
	libpurple:
	* The Buddy State Notification plugin no longer prints duplicate
	  notifications when the same buddy is in multiple groups. (Florian
	  Quèze)
	* The Buddy State Notification plugin no longer turns JID's, MSN
	  Passport ID's, etc. into links. (Florian Quèze)
	* purple-remote now has a "getstatusmessage" command to retrieve
	  the text of the current status message.
	* Various fixes to the nullprpl. (Paul Aurich)
	* Fix a crash when accessing the roomlist for an account that's not
	  connected. (Paul Aurich)
	* Fix a crash in purple_accounts_delete that happens when this
	  function is called before the buddy list is initialized.
	  (Florian Quèze)
	* Fix use of av_len in perl bindings to fix some off-by-one bugs
	  (Paul Aurich)
	* On ICQ, advertise the ICQ 6 typing capability.  This should fix
	  the reports of typing notifications not working with third-party
	  clients. (Jaromír Karmazín)
	* Many QQ fixes and improvements, including the ability to connect
	  using QQ2008 protocol and sending/receiving of long messages.
	  The recommended version to use is still QQ2005.
	* Fix a crash with DNS SRV lookups. (Florian Quèze)
	* Fix a crash caused by authorization requests. (Florian Quèze)

	Gadu-Gadu:
	* Add support for IM images. (Tomasz Sałaciński, Adam Strzelecki)
	* Gadu-Gadu now checks that UID's are valid. (Adam Strzelecki)
	* Gadu-Gadu now does proper charset translations where needed. (Adam
	  Strzelecki)

	MSN:
	* Fix an error with offline messages by shipping the *new*
	  "Microsoft Secure Server Authority" and the "Microsoft Internet